# win-sandbox

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bug.md  plan.md  plan_p0.md  test_mkdir.cmd  与tare的差距.md
config/: default-sandbox.json
crates/sandbox-core/: Cargo.toml
crates/sandbox-core/src/: acl.rs  config.rs  ffi.rs  ipc.rs  lib.rs
crates/sandbox-host/: Cargo.toml
crates/sandbox-host/src/: ai_server.rs  audit.rs  cli.rs  config.rs  inject.rs  ipc.rs  lib.rs  main.rs
dll/inject-helper/: CMakeLists.txt
dll/inject-helper/src/: main.cpp
dll/sandbox-hook/: CMakeLists.txt  detour.cpp  dllmain.cpp  file_acl.cpp  hook_engine.cpp  net_acl.cpp
dll/sandbox-hook/include/: detour.h  file_acl.h  hook_engine.h  ipc_client.h  net_acl.h  shared_config.h  utils.h
dll/sandbox-hook/src/: detour.cpp  dllmain.cpp  file_acl.cpp  hook_crash.cpp  hook_engine.cpp  hook_file.cpp  hook_memory.cpp  hook_process.cpp  ipc_client.cpp  net_acl.cpp  path_resolver.cpp  shared_config.cpp  utils.cpp
tests/: base.py  conftest.py  test_ai_api.py  test_all.py  test_basic.py  test_clr.py  test_edge.py  test_file_acl.py  test_network.py  test_p0_regression.py  test_recursive.py  test_x86.py
tests/configs/: test_deny.json  test_inherit.json  test_net_port_deny.json  test_network_deny.json  test_network_ipv6.json  test_p0_regression.json  test_readonly.json  test_recursive_off.json  test_strict_deny.json
tests/workdir/: simple_write2.txt
