[package]
name = "sandbox-core"
version = "0.1.0"
edition = "2021"
description = "Windows Sandbox — shared types, config model, IPC protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_Networking_WinSock",
]}
