[package]
name = "sandbox-host"
version = "0.1.0"
edition = "2021"
description = "Windows Sandbox — Rust host process (library + CLI)"

[lib]
name = "sandbox_host"

[[bin]]
name = "sandbox-host"
path = "src/main.rs"

[dependencies]
sandbox-core = { path = "../sandbox-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"


